# KL_DPO_FINAL_PROJECT

./: DPO_KL_final_project_Polyakova_11072025_final.pptx  Data_filter_10072025.py  Human_eval_pharma_exampleas_12072025.xlsx  TMX_CSV_converter_metrics_calculations_11072025.ipynb  app.py
translation_evaluator_120725/: FILE_PREPARATION_README.md  INSTALL_COMMANDS.md  QUICK_INSTALL.md  USER_GUIDE.md  analyze_performance.bat  app_070625.py  app_small.py  check_conda.bat  cleanup_conda_system.bat  cleanup_old_backups.py  cleanup_system.bat  cleanup_system_old.bat  diagnose_conda.bat  environment.yml  file_preparation_app.py  file_preparation_script.py  fix_dependencies.bat  optimize_performance.bat  pyproject.toml  quick_fix.bat  requirements-exact.txt  requirements.txt  run_app.bat  run_app_advanced.bat  run_app_conda.bat  run_app_conda_fast.bat  run_app_performance.bat  run_app_smart.bat  run_app_ultra.bat  run_app_with_backup.bat  run_file_preparation.bat  run_file_preparation.py  setup_complete_env.bat  setup_conda_env.bat  setup_conda_env_fast.bat  setup_env.bat  setup_file_preparation.bat  setup_translation_backup.bat  start.bat  test_dependencies.bat  (+2 more)
translation_evaluator_120725/docs/: api.md  installation.md  usage.md
translation_evaluator_120725/examples/example_csv/: reference.csv  source.csv
translation_evaluator_120725/scripts/: git_rollback.ps1  git_rollback.sh  git_sync.ps1  git_sync.sh  run_tests.sh  setup_env.ps1  setup_env.sh
translation_evaluator_120725/tests/: __init__.py  test_batch_optimizer.py  test_model_loader.py  test_translator.py
translation_evaluator_120725/translation_utils/: backup_integration.py  cache.py  docx_utils.py  metrics.py  model_loader.py  tmx_utils.py  translator.py
translation_evaluator_120725/translation_utils/bak/: docx_utils_bak01.py  (+2 more)
(+34 files in other folders)
